boost1.54 (1.54.0-2) unstable; urgency=low

  * patches/001-coroutine.patch:
  * patches/002-date-time.patch: New.  Upstream maintenance fixes from
    http://www.boost.org/patches/.

  * patches/hurd-clock-gettime.patch: New.  GNU Hurd has clock_gettime()
    despite not defining _POSIX_TIMERS.  Closes: #714847.
  
 -- Steve M. Robbins <smr@debian.org>  Sat, 06 Jul 2013 18:12:42 -0500

boost1.54 (1.54.0-1) unstable; urgency=low

  * New upstream.
    - Add shared library packages for new library Boost.Log.

 -- Steve M. Robbins <smr@debian.org>  Mon, 01 Jul 2013 21:28:11 -0500

boost1.53 (1.53.0-6) UNRELEASED; urgency=low

  * Make libboost-graph[-parallel]1.53-dev packages depend on the library
    package libboost-graph[-parallel]1.53.0 to avoid broken symlinks.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Mon, 01 Jul 2013 10:39:16 +0100

boost1.53 (1.53.0-5) unstable; urgency=low

  * control: Boost.Thread depends on some non header-only libraries:
    System, Chrono, and DateTime.  The latter was already present, but
    dependencies for libboost-thread1.53-dev updated to include
    libboost-chrono1.53-dev and libboost-system1.53-dev.  Closes: #706648.

 -- Steve M. Robbins <smr@debian.org>  Tue, 28 May 2013 02:52:24 -0500

boost1.53 (1.53.0-4) unstable; urgency=low

  * rules: Add 'context' to list of libraries when Boost.Context is
    supported.  Closes: #706220.
  
  * rules: Disable Boost.Context for additional architectures: alpha,
    hppa, m68k, powerpcspe, ppc64, sh4, sparc64, and x32.  Closes: #703549.

 -- Steve M. Robbins <smr@debian.org>  Sat, 27 Apr 2013 01:12:49 -0500

boost1.53 (1.53.0-3) unstable; urgency=low

  * rules: Ensure --without-context passed during install stage, too.
  
  * patches/chrono-duration.patch: New.  Fix conflict between
    chrono/duration.hpp and apache2/httpd.h (thanks, Kirill Spitsin).
    Closes: #703325.

  * control: Make libboost-mpi-python depend on mpi-default-bin so that